--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,7 @@ services:
       - node_modules:/app/node_modules
     environment:
       TZ: Asia/Tokyo
+      APP_DATABASE_PASSWORD: password
     ports:
       - "3000:3000"
     depends_on:
