--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,21 @@
-# fly.toml app configuration file generated for poketype on 2023-09-01T17:30:02+09:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = "poketype"
-primary_region = "nrt"
-console_command = "/rails/bin/rails console"
 
-[build]
-
-[http_service]
+[[services]]
   internal_port = 3000
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ["app"]
+  protocol = "tcp"
 
-[[statics]]
-  guest_path = "/app/public"
-  url_prefix = "/"
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = "80"
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = "443"
+
+[env]
+  PORT = "3000"
+  RAILS_ENV = "production"
