--- a/fly.toml
+++ b/fly.toml
@@ -1,21 +1,22 @@
+# fly.toml app configuration file generated for poketype on 2023-09-02T23:20:35+09:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = "poketype"
+primary_region = "nrt"
+console_command = "/rails/bin/rails console"
 
-[[services]]
+[build]
+
+[http_service]
   internal_port = 3000
-  protocol = "tcp"
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ["app"]
 
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = "80"
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = "443"
-
-[env]
-  PORT = "3000"
-  RAILS_ENV = "production"
+[[statics]]
+  guest_path = "/app/public"
+  url_prefix = "/"
