--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,5 @@
 services:
-  db:
+  db: # MySQL
     image: mysql:5.7
     platform: linux/amd64
     environment:
@@ -9,6 +9,16 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - 3307:3306
+
+  postgres_db: # PostgreSQL
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: my_production_db
+      POSTGRES_USER: my_secure_user
+      POSTGRES_PASSWORD: my_secure_password
+    ports:
+      - 5432:5432
+
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -22,10 +32,16 @@ services:
       TZ: Asia/Tokyo
       APP_DATABASE_PASSWORD: password
       SECRET_KEY_BASE: "7a03ecab408e8bc75bf6f5c5a8dd5a92b9cb603cf220ac70f8fcc3961af3c17390858c8483ecbc609e02abce996a30f3b1562227910e2e86a09eb1892aa1735b"
+      POSTGRES_DB: my_production_db
+      POSTGRES_USER: my_secure_user
+      POSTGRES_PASSWORD: my_secure_password
+      POSTGRES_HOST: postgres_db
     ports:
       - "3000:3000"
     depends_on:
       - db
+      - postgres_db
+
 volumes:
   mysql_data:
   bundle_data:
