Fix Heroku deployment issues

--- a/compose.yml
+++ b/compose.yml
@@ -1,3 +1,4 @@
+version: "3"
 services:
   db: # MySQL
     image: mysql:5.7
@@ -28,16 +29,10 @@ services:
       - .:/app
       - bundle_data:/usr/local/bundle:cached
       - node_modules:/app/node_modules
-    environment:
-      TZ: Asia/Tokyo
-      APP_DATABASE_PASSWORD: password
-      SECRET_KEY_BASE: "7a03ecab408e8bc75bf6f5c5a8dd5a92b9cb603cf220ac70f8fcc3961af3c17390858c8483ecbc609e02abce996a30f3b1562227910e2e86a09eb1892aa1735b"
-      POSTGRES_DB: my_production_db
-      POSTGRES_USER: my_secure_user
-      POSTGRES_PASSWORD: my_secure_password
-      POSTGRES_HOST: postgres_db
+    env_file:
+      - .env
     ports:
-      - "3000:3000"
+      - "3001:3000"
     depends_on:
       - db
       - postgres_db
